# A-RUST-GAME

./: Cargo.toml  README.md  save.ron  saved.ron  tiled_types_export.json
assets/Art/Palettes/: ForestTileset.prefab
assets/Tilemap/: Cavernas_by_Adam_Saltsman.tsx  Decors.tsx  Inca_back2_by_Kronbits.tsx  SunnyLand_by_Ansimuz-extended.tsx  Tileset.tsx  TopDown_by_deepnight - 副本.tsx  future_map.tsx  game.tmx  game2.tmx  gothic-castle-background.tsx  gothic-castle-tileset.tsx  pixilart-drawing.tsx
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/my_bevy_game/: all.html  enum.AppState.html  enum.PausedState.html  fn.main.html  index.html  sidebar-items.js
doc/my_bevy_game/animator/: enum.AnimatorParam.html  enum.ConditionOperator.html  fn.update_animators.html  index.html  sidebar-items.js  struct.AnimationState.html  struct.Animator.html  struct.AnimatorPlugin.html  struct.Condition.html  struct.Transition.html
doc/my_bevy_game/background/: fn.play_audio.html  fn.setup_bg.html  index.html  sidebar-items.js  struct.Background.html  struct.BackgroundPlugin.html
doc/my_bevy_game/bag_ui/: constant.GRID_HEIGHT.html  constant.GRID_WIDTH.html  fn.despawn_inventory_ui.html  fn.down.html  fn.get_page.html  fn.handle_inventory_input.html  fn.left.html  fn.right.html  fn.spawn_inventory_ui.html  fn.up.html  fn.update_item_info_display.html  index.html  sidebar-items.js  struct.BagUIPlugin.html  struct.HasItemSlot.html  struct.InventoryUI.html  struct.ItemGridPanel.html  struct.ItemInfoDesc.html  struct.ItemInfoIcon.html  struct.ItemInfoName.html  struct.ItemInfoNum.html  struct.ItemInfoPanel.html  struct.ItemInfoType.html  struct.ItemPage.html  struct.ItemSlot.html  struct.ItemSlotOf.html
doc/my_bevy_game/blocks/: fn.end_game.html  fn.fire_demon_observer.html  fn.martial_observer.html  fn.setup_blocks.html  fn.throne_position_system.html  fn.throne_position_system_prequisite.html  index.html  sidebar-items.js  struct.BlockPlugin.html  struct.FireDemonBlocks.html  struct.InitialGate.html  struct.KingdomThrone.html  (+1 more)
game_derive/: Cargo.toml
game_derive/src/: lib.rs
src/: animator.rs  background.rs  bag_ui.rs  blocks.rs  camera.rs  controller.rs  damagable.rs  ending.rs  enemy.rs  game_layer.rs  getitem.rs  healthbar.rs  hint.rs  input.rs  items.rs  lib.rs  main.rs  menu.rs  pause.rs  physics.rs  player.rs  save.rs  tiled_types_export.json  tiles.rs
src/enemy/: castle_skeleton.rs  fire_demon.rs  flying_eye.rs  martial.rs  skeleton.rs
src/player/: parameters.rs
(+560 files in other folders)
