[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.2" }
avian2d = { version = "0.2" }
leafwing-input-manager = { version = "0.16" }
bevy-inspector-egui = { version = "0.29" }
bevy_ecs_tiled =  { version = "0.5", features = [ "user_properties","physics","avian" ] }
bevy_ecs_tilemap = { version = "0.15" }
tiled = "0.13"
seldom_state = "0.12"
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
