[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3" }
avian2d = { version = "0.2" }
leafwing-input-manager = { version = "0.16" }
bevy-inspector-egui = { version = "0.30.0" }
bevy_ecs_tiled =  { version = "0.6", features = [ "user_properties","physics","avian" ] }
bevy_ecs_tilemap = { version = "0.15" }
tiled = "0.13.0"
big-brain = "0.22.0"
bevy-tnua-physics-integration-layer = "0.5"
bevy-tnua = "0.21.0"
bevy-tnua-avian2d = "0.2"
bevy_kira_audio = { version = "0.22.0", features = [ "mp3", "wav" ]}
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
