[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2024"

[profile.release]
[target.'cfg(windows)'.dependencies]

[dependencies]
bevy = { version = "0.16.1" , features = ["serialize"] }
avian2d = { version = "0.3.1" }
leafwing-input-manager = { version = "0.17" }
bevy-inspector-egui = { version = "0.31.0" }
bevy_ecs_tiled =  { version = "0.7", features = [ "user_properties","physics","avian" ] }
bevy_ecs_tilemap = { version = "0.16" }
tiled = "0.14.0"
big-brain = { git = "https://github.com/zkat/big-brain.git", branch = "main" }
bevy-tnua-physics-integration-layer = "0.8"
bevy-tnua = "0.24.0"
bevy-tnua-avian2d = "0.5"
bevy_kira_audio = { version = "0.23.0", features = [ "mp3", "wav" ]}
moonshine-save = "0.4.3"
serde = "1.0.219"
rand = "0.9.1"
game_derive = { path = "./game_derive" }
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
